--- a/drzewo1.html
+++ b/drzewo1.html
@@ -146,7 +146,7 @@
       <div class="tooltip">
         <a href="#">
           <img src="images/sowa.png" width="100px" height="150px" />
-          <span class="tooltiptext"><h5>5.d3</h5></span></a
+          <span class="tooltiptext"><h5>Rozwinięcie skoczków</h5></span></a
         >
       </div>
     </div>
@@ -154,7 +154,7 @@
       <div class="tooltip">
         <a href="#"
           ><img src="images/ptak1.png" width="100px" height="100px" />
-          <span class="tooltiptext"><h5>5.d4</h5></span></a
+          <span class="tooltiptext"><h5>Manewr skoczka</h5></span></a
         >
       </div>
     </div>
@@ -162,7 +162,7 @@
       <div class="tooltip">
         <a href="#"
           ><img src="images/ptak4.png" width="100px" height="100px" />
-          <span class="tooltiptext"><h5>5.d4 exd4</h5></span></a
+          <span class="tooltiptext"><h5>Przełom w centrum</h5></span></a
         >
       </div>
     </div>
@@ -170,23 +170,23 @@
       <div class="tooltip">
         <a href="#"
           ><img src="images/wiewior.png" width="100px" height="100px" />
-          <span class="tooltiptext"><h5>6.cxd4</h5></span></a
+          <span class="tooltiptext"><h5>Typowy nacisk gońca</h5></span></a
         >
       </div>
     </div>
-    <div class="tile tile-6">
+    <!-- <div class="tile tile-6">
       <div class="tooltip">
         <a href="#"
           ><img src="images/ptak4.png" width="100px" height="100px" />
           <span class="tooltiptext"><h5>7.Gd2 Gxd2</h5></span></a
         >
       </div>
-    </div>
+    </div> -->
     <div class="tile tile-7">
       <div class="tooltip">
         <a href="#"
           ><img src="images/ptak2.png" width="100px" height="100px" />
-          <span class="tooltiptext"><h5>7.Gd2 Sxe4</h5></span></a
+          <span class="tooltiptext"><h5>Atak pionowy</h5></span></a
         >
       </div>
     </div>
@@ -194,7 +194,7 @@
       <div class="tooltip">
         <a href="#"
           ><img src="images/ptak0.png" width="100px" height="100px" />
-          <span class="tooltiptext"><h5>6.e5</h5></span></a
+          <span class="tooltiptext"><h5>Typowe związania</h5></span></a
         >
       </div>
     </div>
@@ -202,7 +202,7 @@
       <div class="tooltip">
         <a href="#"
           ><img src="images/ptak2.png" width="100px" height="100px" />
-          <span class="tooltiptext"><h5>Hungarian Defence</h5></span></a
+          <span class="tooltiptext"><h5>Przerzutu wieży</h5></span></a
         >
       </div>
     </div>
