--- a/drzewo4.html
+++ b/drzewo4.html
@@ -144,9 +144,9 @@
 
     <div class="tile tile-2">
       <div class="tooltip">
-        <a href="#">
+        <a href="szach1.html">
           <img src="images/sowa.png" width="100px" height="150px" />
-          <span class="tooltiptext"><h5>5.d3</h5></span></a
+          <span class="tooltiptext"><h5>Harmonijny rozwój figur</h5></span></a
         >
       </div>
     </div>
@@ -154,7 +154,9 @@
       <div class="tooltip">
         <a href="#"
           ><img src="images/ptak1.png" width="100px" height="100px" />
-          <span class="tooltiptext"><h5>5.d4</h5></span></a
+          <span class="tooltiptext"
+            ><h5>Białe dążą do przejęcia centrum</h5></span
+          ></a
         >
       </div>
     </div>
@@ -162,19 +164,19 @@
       <div class="tooltip">
         <a href="#"
           ><img src="images/ptak4.png" width="100px" height="100px" />
-          <span class="tooltiptext"><h5>5.d4 exd4</h5></span></a
+          <span class="tooltiptext"><h5>Pozycja zamknięta</h5></span></a
         >
       </div>
     </div>
-    <div class="tile tile-5">
+    <!-- <div class="tile tile-5">
       <div class="tooltip">
         <a href="#"
           ><img src="images/wiewior.png" width="100px" height="100px" />
           <span class="tooltiptext"><h5>6.cxd4</h5></span></a
         >
       </div>
-    </div>
-    <div class="tile tile-6">
+    </div> -->
+    <!-- <div class="tile tile-6">
       <div class="tooltip">
         <a href="#"
           ><img src="images/ptak4.png" width="100px" height="100px" />
@@ -205,6 +207,6 @@
           <span class="tooltiptext"><h5>Hungarian Defence</h5></span></a
         >
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
