--- a/mapa3.html
+++ b/mapa3.html
@@ -102,7 +102,7 @@
     <div class="zmien3">
       <a href="jezioro.html"><button>Wróć</button></a>
     </div>
-    <a href="drzewo2.html" id="kafelek1" class="kafelek"
+    <!-- <a href="drzewo2.html" id="kafelek1" class="kafelek"
       ><h1>🔓</h1>
       <div class="tekst">5.d3</div>
     </a>
@@ -124,13 +124,14 @@
 
     <a href="strona2.html" id="kafelek6" class="kafelek">
       <div class="tekst">6.e5</div>
+    </a> -->
+
+    <a href="drzewo2.html" id="kafelek7" class="kafelek"
+      >🔓
+      <div class="tekst"></div>
     </a>
 
-    <a href="https://example.com" id="kafelek7" class="kafelek" target="_blank">
-      <div class="tekst">Hungarian Defence</div>
-    </a>
-
-    <a href="#sekcja" id="kafelek8" class="kafelek">
+    <!-- <a href="#sekcja" id="kafelek8" class="kafelek">
       <div class="tekst">5.e5</div>
     </a>
     <a href="#sekcja" id="kafelek9" class="kafelek">
@@ -155,6 +156,6 @@
 
     <a href="#sekcja" id="kafelek13" class="kafelek">
       <div class="tekst">5.0-0</div>
-    </a>
+    </a> -->
   </body>
 </html>
