--- a/mapa3.html
+++ b/mapa3.html
@@ -5,13 +5,15 @@
     <title>mapa3</title>
     <style>
       body {
+        background-image: url("images/goblin1.png");
+        background-color: black;
         background-size: cover;
-        background-image: url("images/goblin2.png");
+        background-position: center 70%;
+        background-attachment: fixed;
+        text-align: center;
         margin: 0;
         height: 100vh;
-        background-color: #f0f0f0;
-        position: relative;
-        font-family: Arial, sans-serif;
+        cursor: pointer;
       }
 
       .kafelek {
@@ -33,7 +35,8 @@
       }
 
       .kafelek:hover {
-        background-color: rgba(0, 0, 0, 0.7);
+        background-color: rgba(115, 113, 113, 0.7);
+        opacity: 0.2;
       }
 
       .kafelek:hover .tekst {
@@ -67,7 +70,7 @@
       }
       #kafelek7 {
         bottom: 25%;
-        left: 45%;
+        left: 25%;
       }
       #kafelek8 {
         bottom: 75%;
