--- a/mapa3.html
+++ b/mapa3.html
@@ -8,7 +8,11 @@
         background-image: url("images/goblin1.png");
         background-color: black;
         background-size: cover;
-
+        background-position: center 50%;
+        background-attachment: fixed;
+        text-align: center;
+        margin: 0;
+        height: 100vh;
         cursor: pointer;
       }
 
@@ -65,7 +69,7 @@
         right: 20%;
       }
       #kafelek7 {
-        bottom: 25%;
+        bottom: 8%;
         left: 25%;
       }
       #kafelek8 {
