--- a/szach1.html
+++ b/szach1.html
@@ -31,7 +31,7 @@
         width: 12.5%;
         height: 12.5%;
 
-        background-color: whitesmoke;
+        background-color: rgb(169, 169, 169);
         transition: background-color 0.3s ease, box-shadow 0.3s ease,
           transform 0.3s ease;
       }
