--- a/mapa3.html
+++ b/mapa3.html
@@ -35,9 +35,7 @@
       }
 
       .kafelek:hover {
-        background-color: rgba(115, 113, 113, 0.7);
-
-        opacity: 0.2;
+        box-shadow: 0 8px 16px rgba(38, 38, 38, 0.6);
       }
 
       .kafelek:hover .tekst {
@@ -131,7 +129,7 @@
     </a> -->
 
     <a href="drzewo2.html" id="kafelek7" class="kafelek"
-      >🔓
+      ><img src="images/5.gif" />
       <div class="tekst"></div>
     </a>
 
