--- a/mapa3.html
+++ b/mapa3.html
@@ -129,7 +129,7 @@
     </a> -->
 
     <a href="drzewo2.html" id="kafelek7" class="kafelek"
-      ><img src="images/5.gif" />
+      ><img src="images/5.gif" width="50px" />
       <div class="tekst"></div>
     </a>
 
