--- a/drzewo4.html
+++ b/drzewo4.html
@@ -145,7 +145,7 @@
     <div class="tile tile-2">
       <div class="tooltip">
         <a href="szach1.html">
-          <img src="images/sowa.png" width="100px" height="150px" />
+          <img src="images/02.gif" width="100px" height="150px" />
           <span class="tooltiptext"><h5>Harmonijny rozwój figur</h5></span></a
         >
       </div>
