--- a/karta3.html
+++ b/karta3.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <style>
       body {
-        background-image: url("images/mag1.png");
-  background-position: center; /* Wyśrodkowanie tła */
-  background-repeat: no-repeat; /* Zapobiega powtarzaniu tła */
-  background-size: cover; /* Dopasowuje tło do rozmiaru okna */
+        background-image: url("images/mag1.webp");
+  background-position: center; 
+  background-repeat: no-repeat; 
+  background-size: cover; 
   
       }
 
@@ -247,7 +247,7 @@
 
       <div id="topbar">
         <div id="topbarL">
-          <img src="images/jas2.png" width="100" height="100" />
+          <img src="images/jas2.webp" width="100" height="100" />
         </div>
         <div id="topbarR">
           <span class="bigtitle">Gandalf</span>
@@ -266,7 +266,7 @@
       <div id="topbar">
         <div id="topbarL">
           <a href="kosmos.html"
-            ><img src="images/kosmos.png" width="100" height="100"
+            ><img src="images/kosmos.webp" width="100" height="100"
           /></a>
         </div>
         <div id="topbarR">
@@ -366,7 +366,7 @@
         
           <div class="carousel-images">
             <div class="carousel-image">
-              <img src="images/c.png" alt="Zdjęcie 1">
+              <img src="images/c.webp" alt="Zdjęcie 1">
             </div>
             <div class="carousel-image">
               <img src="images/b.png" alt="Zdjęcie 2">
