--- a/kosmos.html
+++ b/kosmos.html
@@ -6,7 +6,7 @@
     <title>Kosmos</title>
     <style>
       body {
-        background-image: url("images/kosmos.jpeg");
+        background-image: url("images/kosmos1.webp");
         background-size: cover;
       }
 
@@ -137,7 +137,7 @@
     </div>
 
     <div>
-      <img src="images/jas2.jpeg" class="top-left-image" />
+      <img src="images/jas2.webp" class="top-left-image" />
     </div>
 
     <div class="tile tile-1">
