--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Strona magii szachowej</title>
     <style>
       body {
-        background-image: url("images/mag1.png");
+        background-image: url("images/mag1.webp");
         background-size: cover;
         background-position: center 30%;
         background-attachment: fixed;
@@ -14,16 +14,14 @@
         height: 100vh;
         cursor: pointer;
       }
-
       .content {
-        position: fixed; /* Ustawienie kontenera w stałej pozycji względem okna */
-        bottom: 20px; /* Odległość od dolnej krawędzi okna */
-        left: 50%; /* Wyśrodkowanie w poziomie */
-        transform: translateX(-50%); /* Dokładne wyśrodkowanie */
+        position: fixed;
+        bottom: 20px;
+        left: 50%;
+        transform: translateX(-50%);
         width: 100%;
         text-align: center;
       }
-
       h1 {
         font-family: "Georgia", serif;
         font-size: 3em;
@@ -32,7 +30,6 @@
         letter-spacing: 2px;
         color: #f1f1f1;
       }
-
       button {
         font-size: 20px;
         padding: 15px 30px;
@@ -44,7 +41,6 @@
         border-radius: 10px;
         transition: all 0.3s ease;
       }
-
       button:hover {
         background-color: #1d1d1e;
         color: #fff;
