--- a/indexB.html
+++ b/indexB.html
@@ -5,7 +5,7 @@
     <title>School of chess magic</title>
     <style>
       body {
-        background-image: url("images/mag1.png");
+        background-image: url("images/mag1.webp");
         background-size: cover;
         background-position: center 30%;
         background-attachment: fixed;
