--- a/karta5.html
+++ b/karta5.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
  <head>
     <meta charset="utf-8" />
+     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
       body {
         background-image: url("images/mag1.webp");
