--- a/mapa.html
+++ b/mapa.html
@@ -8,7 +8,7 @@
       body {
         background-size: cover;
 
-        background-image: url("images/mapa2.png");
+        background-image: url("images/mapa21.webp");
       }
 
       .tile {
@@ -88,7 +88,7 @@
   </head>
   <body>
     <div class="image-container">
-      <img src="images/jas2.png" alt="Obrazek w rogu" class="top-left-image" />
+      <img src="images/jas2.webp" alt="Obrazek w rogu" class="top-left-image" />
       <div class="image-caption">Gandalf</div>
     </div>
     <div class="zmien3">
