--- a/jezioro.html
+++ b/jezioro.html
@@ -6,7 +6,7 @@
     <title>Mapa</title>
     <style>
       body {
-        background-image: url("images/jezioro.png");
+        background-image: url("images/jezioro.webp");
         background-size: cover;
         background-position: center 70%;
 
@@ -27,8 +27,8 @@
       }
 
       .tile:hover {
-        box-shadow: 0 8px 16px rgba(38, 38, 38, 0.6); /* Dodajemy świecący efekt */
-        transform: scale(1.1); /* Powiększamy kafelek o 10% */
+        box-shadow: 0 8px 16px rgba(38, 38, 38, 0.6);
+        transform: scale(1.1);
       }
 
       .tile-2 {
@@ -58,22 +58,20 @@
         position: absolute;
         top: 0;
         left: 0;
-        text-align: center; /* Wyrównanie napisu do środka */
+        text-align: center;
         margin: 1%;
       }
 
-      /* Styl dla obrazka */
       .top-left-image {
-        width: 200px; /* Szerokość obrazka */
-        height: auto; /* Wysokość dopasowana proporcjonalnie */
+        width: 200px;
+        height: auto;
         border-radius: 50%;
       }
 
-      /* Styl dla napisu */
       .image-caption {
-        font-size: 20px; /* Rozmiar czcionki napisu */
-        margin-top: 1%; /* Odstęp między obrazkiem a napisem */
-        color: #f4f0f0; /* Kolor tekstu */
+        font-size: 20px;
+        margin-top: 1%;
+        color: #f4f0f0;
       }
       .tile1 {
         position: absolute;
@@ -94,21 +92,20 @@
       }
       .tooltip .tooltiptext {
         visibility: hidden;
-        width: 50px; /* Zmieniona szerokość dymka */
+        width: 50px;
         background-color: rgba(0, 0, 0, 0.7);
         color: #fff;
         text-align: center;
         border-radius: 5px;
-        padding: 1px; /* Zwiększony padding (odstępy wewnętrzne dymka) */
+        padding: 1px;
         position: absolute;
         z-index: 1;
-        top: 25%; /* Ustawienie dymka poniżej tekstu */
+        top: 25%;
         left: 110%;
         opacity: 0;
         transition: opacity 0.3s;
-        font-size: 10px; /* Zmieniony rozmiar tekstu w dymku */
+        font-size: 10px;
       }
-
       .tooltip:hover .tooltiptext {
         visibility: visible;
         opacity: 1;
@@ -134,7 +131,7 @@
   </head>
   <body>
     <div class="image-container">
-      <img src="images/jas2.png" alt="Obrazek w rogu" class="top-left-image" />
+      <img src="images/jas2.webp" alt="Obrazek w rogu" class="top-left-image" />
       <div class="image-caption">Gandalf</div>
     </div>
 
@@ -156,7 +153,7 @@
     <div class="tile tile-3">
       <div class="tooltip">
         <a href="mapa3.html"
-          ><img src="images/ogr.png" width="100px" height="100px" />
+          ><img src="images/ogr.webp" width="100px" height="100px" />
           <span class="tooltiptext"><h5>Giuoco Piano</h5></span></a
         >
       </div>
