--- a/kraina.html
+++ b/kraina.html
@@ -6,7 +6,7 @@
     <title>Szachownica</title>
     <style>
       body {
-        background-image: url("images/kont.png");
+        background-image: url("images/kont.webp");
         background-size: cover;
       }
 
@@ -113,7 +113,7 @@
   </head>
   <body>
     <div class="image-container">
-      <img src="images/jas2.png" alt="Obrazek w rogu" class="top-left-image" />
+      <img src="images/jas2.webp" alt="Obrazek w rogu" class="top-left-image" />
       <div class="image-caption">Gandalf</div>
     </div>
     <div class="zmien3">
@@ -132,7 +132,7 @@
     <div class="tile tile-2">
       <div class="tooltip">
         <a href="#"
-          ><img src="images/12.png" width="100" height="100" /> <span class="tooltiptext"><h3>Ducatus Strategiae</h3></span></a
+          ><img src="images/12.webp" width="100" height="100" /> <span class="tooltiptext"><h3>Ducatus Strategiae</h3></span></a
         ></a
         >
       </div>
@@ -152,7 +152,7 @@
     <div class="tile tile-5">
       <div class="tooltip">
         <a href="#"
-          ><img src="images/11.png" width="100" height="100" />
+          ><img src="images/11.webp" width="100" height="100" />
           <span class="tooltiptext"><h3>Ducatus Senioris</h3></span></a
         >
       </div>
